# TerminalCoin

./: .gitignore  ARCHITECTURE.md  DEBUG_REPORT.md  IMPLEMENTATION_PLAN_v3.md  README.md  SECURITY.md  __init__.py  analysis_engine.py  api_client.py  app.py  config.py  database.py  exceptions.py  logger.py  models.py  news_client.py  portfolio_manager.py  pyproject.toml  record_demo.sh  requirements.txt  seed_portfolio.py  test_analysis.py  utils.py
scripts/: generate_banner.py  generate_coin_icons.py  generate_qrs.py
tests/: test_utils.py
widgets/: __init__.py  chart.py  portfolio.py
